# rudyscung

./: .clangd  .gitignore  CMakeLists.txt  TC-gcc.cmake  TC-mingw.cmake  meson.build
lib/: meson.build  stb_image.c
res/font/: default.txt
res/shader/: font.frag  font.vert  main.frag  main.vert
src/: main.c  meson.build  rand.c  rand.h  random.c  rudyscung.c  rudyscung.h  util.c  util.h  window.c  window.h
src/client/: client.c  client.h  main.c  meson.build  rudyscung.c  rudyscung.h  window.c
src/phys/: aabb.c  aabb.h  meson.build  raycast.c  raycast.h
src/render/: camera.c  camera.h  chunk_renderer.c  chunk_renderer.h  font.c  font.h  gl.h  level_renderer.c  level_renderer.h  line.c  line.h  meson.build  renderer.c  renderer.h  shader.c  shader.h  shaders.c  shaders.h  sprites.c  sprites.h  tessellator.c  tessellator.h  textures.c  textures.h  tile_renderer.c  tile_renderer.h  tile_texture_dispatcher.c  tile_texture_dispatcher.h  view_type.c  view_type.h
src/server/: main.c  meson.build  server.c  server.h
src/util/: logger.c  logger.h  meson.build  object_counter.c  object_counter.h  random.c  util.c  util.h
src/world/: chunk.c  chunk.h  level.c  level.h  meson.build  side.c  side.h  tile.c  tile.h  tile_shape.c  tile_shape.h
src/world/entity/: ecs.c  ecs.h  ecs_components.h  ecs_systems.c  ecs_systems.h  meson.build
subprojects/: cglm.wrap
